--- a/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
+++ b/apps/pdfexport/templates/pdfexport/finalreport_docraptor.html
@@ -47,8 +47,8 @@
 
         <div class="title-bottom">
             <div class="title-company-info">
-                <p>The Ascent Assessment for Teams is a product of OrgHealth.</br>www.orghealthteam.com</p>
-                <p class="">Copyright 2025</p>
+                <p>The Ascent Assessment is a product of OrgHealth.</br>www.orghealthteam.com</p>
+                <p class="">Copyright {{ now|date:"Y" }}</p>
             </div>
         </div>
     </div>
