Remove custom tax flow, use Stripe Auto Tax and calculate at confirm

--- a/apps/payments/templates/payments/checkout.html
+++ b/apps/payments/templates/payments/checkout.html
@@ -47,7 +47,7 @@
           <p class="total-line"><span>Total</span><span id="ps-total">$750.00</span></p>
         </div>
         <p class="helptext">
-          All amounts in CAD. Tax is calculated at checkout based on your billing address.
+          All amounts in CAD. Tax is calculated at payment based on your billing address.
         </p>
 
         <form class="promo-inline" onsubmit="return false;">
