--- a/apps/payments/templates/payments/canceled.html
+++ b/apps/payments/templates/payments/canceled.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Payment Cancelled{% endblock %}
 {% block content %}
-<h2>Payment Success</h2>
+<h2>Payment Cancelled</h2>
   <section class="section">
     <div class="container">
       <p>Your payment was cancelled.</p>
