--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -12,7 +12,7 @@
   <div class="page-wrapper">
 
     <header class="public-header">
-      <img src="{% static 'images/logo.svg' %}" alt="Ascent Assessment Logo" class="public-header-logo" />
+      <img src="{% static 'images/logo-full.png' %}" alt="OrgHealth Ascent Assessment Logo" class="public-header-logo" />
     </header>
 
     <main class="public-container">
@@ -23,7 +23,7 @@
     </main>
 
     <footer class="public-footer">
-      &copy; {% now "Y" %} Ascent Assessment
+      &copy; {% now "Y" %} Ascent Assessment, a product of <a href="https://www.orghealthteam.com/ascent" target="blank">OrgHealth</a>.
     </footer>
 
   </div>
