Update password forms and fix reverse error.

--- a/apps/accounts/templates/accounts/password_reset_done.html
+++ b/apps/accounts/templates/accounts/password_reset_done.html
@@ -2,7 +2,7 @@
 {% block title %}Check your inbox | Ascent Assessment{% endblock %}
 
 {% block content %}
-  <h1>Check your inbox</h1>
+  <h1 class="text-center">Check your inbox</h1>
   <p>
     If there’s an account for that email, we’ve sent a reset link. It may take a minute to arrive.
     Be sure to check your spam or promotions folder.
