--- a/apps/accounts/templates/accounts/password_reset_form.html
+++ b/apps/accounts/templates/accounts/password_reset_form.html
@@ -2,7 +2,7 @@
 {% block title %}Reset your password | Ascent Assessment{% endblock %}
 
 {% block content %}
-  <h1>Forgot your password?</h1>
+  <h1 class="text-center">Forgot your password?</h1>
   <p>Enter the email address for your account. We’ll send you a secure link to reset your password.</p>
 
   <form method="post" action="{% url 'accounts:password_reset' %}">
