--- a/apps/accounts/templates/accounts/password_reset_complete.html
+++ b/apps/accounts/templates/accounts/password_reset_complete.html
@@ -2,7 +2,7 @@
 {% block title %}Password updated | Ascent Assessment{% endblock %}
 
 {% block content %}
-  <h1>Password updated</h1>
+  <h1 class="text-center">Password updated</h1>
   <p>Your password has been changed successfully. You can now sign in with your new password.</p>
 
   <p style="margin-top:1rem;">
