--- a/apps/accounts/templates/accounts/password_reset_confirm.html
+++ b/apps/accounts/templates/accounts/password_reset_confirm.html
@@ -2,7 +2,7 @@
 {% block title %}Choose a new password | Ascent Assessment{% endblock %}
 
 {% block content %}
-  <h1>Choose a new password</h1>
+  <h1 class="text-center">Choose a new password</h1>
 
   <form method="post" action="">
     {% csrf_token %}
