--- a/apps/accounts/templates/accounts/password_reset_complete.html
+++ b/apps/accounts/templates/accounts/password_reset_complete.html
@@ -6,6 +6,6 @@
   <p>Your password has been changed successfully. You can now sign in with your new password.</p>
 
   <p style="margin-top:1rem;">
-    <a class="button button--primary full-width" href="{% url 'accounts:login' %}">Go to sign in</a>
+    <a class="text-button" href="{% url 'accounts:login' %}"">Go to log in</a>
   </p>
 {% endblock %}
