--- a/apps/dashboard/templates/dashboard/includes/reports_list.html
+++ b/apps/dashboard/templates/dashboard/includes/reports_list.html
@@ -23,9 +23,11 @@
                 {% endfor %}
             </ul>
         {% else %}
-            <p>No reports have been purchased yet. Generating a report closes an assessment; 
-                once all participants have submitted their responses, purchase the final 
-                report in the Assessments tab.</p>
+            <p>Reports you've purchased will show up here.</p>
+            <p>For a preview of what to expect, download this <a href="">partial sample report</a>.</p>
+            <p class="helptext">Generating a report closes an assessment; once all 
+                participants have submitted their responses, purchase the final report 
+                in the Assessments section.</p>
         {% endif %}
     </div>
 </div>
