--- a/apps/reports/templates/reports/overview.html
+++ b/apps/reports/templates/reports/overview.html
@@ -36,7 +36,7 @@
         </table>
         </div>
     {% else %}
-        <p>No reports have been generated yet.</p>
+        <h3>No reports have been purchased yet.</h3>
     {% endif %}
     </div>
 {% endblock %}
