--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -22,10 +22,7 @@
       </div>
     </main>
 
-    <footer class="public-footer">
-      &copy; {% now "Y" %} Ascent Assessment, a product of <a href="https://www.orghealthteam.com/ascent" target="blank">OrgHealth</a>.
-    </footer>
-
+    {% include "includes/footer.html" %}
   </div>
 
   {% block extra_scripts %}{% endblock %}
