--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
       <main class="main-content">
         {% block content %}{% endblock %}
       </main>
+      {% include "includes/footer.html" %}
     </div>
     
   </div>
